Separate theme class from accordion class (Fixes #4)

--- a/themes/green.css
+++ b/themes/green.css
@@ -1,7 +1,7 @@
-.jsAccordion.green {
+.secondary-nav.green {
     border: 1px solid #385;
 }
-.jsAccordion.green ul li a, .jsAccordion.green ul li span {
+.secondary-nav.green ul li a, .secondary-nav.green ul li span {
     background: #5f9f7f;
     border-top: 1px solid #8fbfaf;
     border-bottom: 1px solid #385;
@@ -14,15 +14,15 @@
     filter: none;
 }
 
-.jsAccordion.green ul li a:hover, .jsAccordion.green ul li span:hover {
+.secondary-nav.green ul li a:hover, .secondary-nav.green ul li span:hover {
     background: #6FB08E;
 }
-.jsAccordion.green ul li div {
+.secondary-nav.green ul li div {
     -mox-box-shadow: inset 0px 1px 3px #bbb;
     -webkit-box-shadow: inset 0px 1px 3px #bbb;
     box-shadow: inset 0px 1px 3px #bbb;
 }
-.jsAccordion.green ul li ul {
+.secondary-nav.green ul li ul {
     background: #f8f8f4;
     -mox-box-shadow: inset 1px 2px 8px #999;
     -webkit-box-shadow: inset 1px 2px 8px #999;
@@ -33,7 +33,7 @@
  * we could avoid this by using the direct child selector (>) above
  * but that will break support for IE6 */
 
-.jsAccordion.green ul li ul li a {
+.secondary-nav.green ul li ul li a {
     background: transparent;
     border: none;
     border-radius: 0px;
@@ -44,7 +44,7 @@
     padding: 0px;
     text-shadow: none;
 }
-.jsAccordion.green ul li ul li a:hover {
+.secondary-nav.green ul li ul li a:hover {
     background: transparent;
     color: #743;
     text-decoration: underline;
