--- a/themes/tan.css
+++ b/themes/tan.css
@@ -1,8 +1,8 @@
-.jsAccordion.tan {
+.secondary-nav.tan {
     border: 1px solid #ccc;
     font-family: Georgia, Times, serif;
 }
-.jsAccordion.tan ul li a, .jsAccordion.tan ul li span {
+.secondary-nav.tan ul li a, .secondary-nav.tan ul li span {
     background: #ecede2;
     border-top-color: #fafcf4;
     border-bottom-color: #e0e2dd;
@@ -16,10 +16,10 @@
     filter: none;
 }
 
-.jsAccordion.tan ul li a:hover, .jsAccordion.tan ul li span:hover {
+.secondary-nav.tan ul li a:hover, .secondary-nav.tan ul li span:hover {
     background: #f5f5e9;
 }
-.jsAccordion.tan ul li ul, .jsAccordion.tan ul li div {
+.secondary-nav.tan ul li ul, .secondary-nav.tan ul li div {
     background: #fafcf4;
     -mox-box-shadow: inset 0px 1px 3px #bbb;
     -webkit-box-shadow: inset 0px 1px 3px #bbb;
@@ -32,7 +32,7 @@
  * we could avoid this by using the direct child selector (>) above
  * but that will break support for IE6 */
 
-.jsAccordion.tan ul li ul li a, .jsAccordion.tan ul li div a {
+.secondary-nav.tan ul li ul li a, .secondary-nav.tan ul li div a {
     background: transparent;
     border: none;
     border-radius: 0px;
@@ -43,7 +43,7 @@
     text-shadow: none;
 	color: #00f;
 }
-.jsAccordion.tan ul li ul li a:hover, .jsAccordion.tan ul li div a:hover {
+.secondary-nav.tan ul li ul li a:hover, .secondary-nav.tan ul li div a:hover {
     background: transparent;
     color: #a13350;
     text-decoration: underline;
