--- a/accordion.css
+++ b/accordion.css
@@ -1,13 +1,13 @@
-.jsAccordion {
+.secondary-nav {
     font-family: sans-serif;
     padding: 0;
 }
-.jsAccordion ul {
+.secondary-nav ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
 }
-.jsAccordion ul li a, .jsAccordion ul li span {
+.secondary-nav ul li a, .secondary-nav ul li span {
     background: #f1f1f1;
     background-image: -moz-linear-gradient(center top, #f6f6f6, #eaeaea);
     background-image: -webkit-gradient(linear, left top, left bottom, from(#f6f6f6), to(#eaeaea));
@@ -32,43 +32,43 @@
     filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#f6f6f6, endColorstr=#eaeaea);
     zoom: 1;
 }
-.ie6 .jsAccordion ul li a, .ie6 .jsAccordion ul li span, .ie7 .jsAccordion ul li a, .ie7 .jsAccordion ul li span, .ie8 .jsAccordion ul li a, .ie8 .jsAccordion ul li span {
+.ie6 .secondary-nav ul li a, .ie6 .secondary-nav ul li span, .ie7 .secondary-nav ul li a, .ie7 .secondary-nav ul li span, .ie8 .secondary-nav ul li a, .ie8 .secondary-nav ul li span {
     border-right: 1px solid #ddd;
     border-bottom: 1px solid #ddd;
 }
-.ie9 .jsAccordion ul li a, .ie9 .jsAccordion ul li span {
+.ie9 .secondary-nav ul li a, .ie9 .secondary-nav ul li span {
     border-radius: 0px;
 }
-.jsAccordion ul li a:hover, .jsAccordion ul li span:hover {
+.secondary-nav ul li a:hover, .secondary-nav ul li span:hover {
     background: #e6e6e4;
     color: #555;
     text-shadow: 1px 1px 0px #f3f3f3;
     filter: none;
     zoom: 1;
 }
-.jsAccordion ul li div {
+.secondary-nav ul li div {
     overflow: hidden; /* expand the div to wrap the margin/padding of the elements it contains */
     padding: 0 16px;
 }
-.jsAccordion ul li div p {
+.secondary-nav ul li div p {
     margin: 1em 0px; /* prevent jQuery jumps in IE 7 */
 }
-.jsAccordion ul li ul {
+.secondary-nav ul li ul {
     padding-bottom: 8px;
 }
-.jsAccordion ul li ul li:first-child {
+.secondary-nav ul li ul li:first-child {
     background-position: 12px 14px;
     padding-top: 12px;
 }
-.jsAccordion ul li ul li {
+.secondary-nav ul li ul li {
     background: transparent url('./arrow.png') no-repeat 12px center;
     font-size: 12px;
     padding: 6px 8px 6px 30px;
 }
-.jsAccordion ul li ul li a {
+.secondary-nav ul li ul li a {
     color: #01573C;
 }
-.jsAccordion ul li ul li a:hover {
+.secondary-nav ul li ul li a:hover {
     color: #743;
 }
 
@@ -76,7 +76,7 @@
  * we could avoid this by using the direct child selector (>) above
  * but that will break support for IE6 */
 
-.jsAccordion ul li ul li a {
+.secondary-nav ul li ul li a {
     background: transparent;
     border: none;
     -moz-border-radius: 0px;
@@ -91,10 +91,10 @@
     text-shadow: none;
     filter: none;
 }
-.ie6 .jsAccordion ul li ul li a, .ie6 .jsAccordion ul li ul li span, .ie7 .jsAccordion ul li ul li a, .ie7 .jsAccordion ul li ul li span, .ie8 .jsAccordion ul li ul li a, .ie8 .jsAccordion ul li ul li span {
+.ie6 .secondary-nav ul li ul li a, .ie6 .secondary-nav ul li ul li span, .ie7 .secondary-nav ul li ul li a, .ie7 .secondary-nav ul li ul li span, .ie8 .secondary-nav ul li ul li a, .ie8 .secondary-nav ul li ul li span {
     border: none;
 }
-.jsAccordion ul li ul li a:hover {
+.secondary-nav ul li ul li a:hover {
     background: transparent;
     text-decoration: underline;
     text-shadow: none;
