--- a/themes/green.css
+++ b/themes/green.css
@@ -18,13 +18,13 @@
     background: #6FB08E;
 }
 .secondary-nav.green > ul > li > div {
-    -mox-box-shadow: inset 0px 1px 3px #bbb;
-    -webkit-box-shadow: inset 0px 1px 3px #bbb;
-    box-shadow: inset 0px 1px 3px #bbb;
+    -mox-box-shadow: inset 0px 1px 3px rgba(0,0,0,0.25);
+    -webkit-box-shadow: inset 0px 1px 3px rgba(0,0,0,0.25);
+    box-shadow: inset 0px 1px 3px rgba(0,0,0,0.25);
 }
 .secondary-nav.green > ul > li > ul {
     background: #f8f8f4;
-    -mox-box-shadow: inset 1px 2px 8px #999;
-    -webkit-box-shadow: inset 1px 2px 8px #999;
-    box-shadow: inset 1px 2px 8px #999;
+    -mox-box-shadow: inset 1px 2px 8px rgba(0,0,0,0.4);
+    -webkit-box-shadow: inset 1px 2px 8px rgba(0,0,0,0.4);
+    box-shadow: inset 1px 2px 8px rgba(0,0,0,0.4);
 }
