--- a/themes/tan.css
+++ b/themes/tan.css
@@ -12,7 +12,7 @@
     font-weight: normal;
     margin-bottom: 0;
     padding-bottom: 8px;
-    text-shadow: 1px 1px 1px #ccc;
+    text-shadow: 1px 1px 1px rgba(0,0,0,0.15);
     filter: none;
 }
 
@@ -21,8 +21,8 @@
 }
 .secondary-nav.tan > ul > li > ul, .secondary-nav.tan > ul > li > div {
     background: #fafcf4;
-    -mox-box-shadow: inset 0px 1px 3px #bbb;
-    -webkit-box-shadow: inset 0px 1px 3px #bbb;
-    box-shadow: inset 0px 1px 3px #bbb;
+    -mox-box-shadow: inset 0px 1px 3px rgba(0,0,0,0.25);
+    -webkit-box-shadow: inset 0px 1px 3px rgba(0,0,0,0.25);
+    box-shadow: inset 0px 1px 3px rgba(0,0,0,0.25);
     color: #555;
 }
