--- a/accordion.css
+++ b/accordion.css
@@ -9,16 +9,20 @@
 }
 .secondary-nav > ul > li > a, .secondary-nav > ul > li > span {
     background: #f6f6f6;
-    background-image: -moz-linear-gradient(center top, transparent, rgba(0,0,0,0.06));
     background-image: -webkit-gradient(linear, left top, left bottom, from(transparent), to(rgba(0,0,0,0.06)));
+    background-image: -webkit-linear-gradient(transparent, rgba(0,0,0,0.06));
+    background-image:    -moz-linear-gradient(transparent, rgba(0,0,0,0.06));
+    background-image:     -ms-linear-gradient(transparent, rgba(0,0,0,0.06));
+    background-image:      -o-linear-gradient(transparent, rgba(0,0,0,0.06));
+    background-image:         linear-gradient(transparent, rgba(0,0,0,0.06));
     border-top: 1px solid #fafafa;
     border-bottom: 1px solid #e6e6e4;
-    -moz-box-shadow: 1px 1px 3px rgba(0,0,0,0.2);
     -webkit-box-shadow: 1px 1px 3px rgba(0,0,0,0.2);
-    box-shadow: 1px 1px 3px rgba(0,0,0,0.2);
-    -moz-border-radius: 6px;
+       -moz-box-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+            box-shadow: 1px 1px 3px rgba(0,0,0,0.2);
     -webkit-border-radius: 6px;
-    border-radius: 6px;
+       -moz-border-radius: 6px;
+            border-radius: 6px;
     color: #666;
     cursor: pointer;
     display: block;
