--- a/css/accordion.css
+++ b/css/accordion.css
@@ -1,81 +1,88 @@
 .secondary-nav {
-    font-family: sans-serif;
-    padding: 0;
-}
-.secondary-nav > ul, .secondary-nav > ul > li > ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-}
-.secondary-nav > ul > li > a, .secondary-nav > ul > li > span {
-    background: #fafafa;
-    background-image: -webkit-gradient(linear, left top, left bottom, from(transparent), to(rgba(0,0,0,0.08)));
-    background-image: -webkit-linear-gradient(transparent, rgba(0,0,0,0.08));
-    background-image:    -moz-linear-gradient(transparent, rgba(0,0,0,0.08));
-    background-image:     -ms-linear-gradient(transparent, rgba(0,0,0,0.08));
-    background-image:      -o-linear-gradient(transparent, rgba(0,0,0,0.08));
-    background-image:         linear-gradient(transparent, rgba(0,0,0,0.08));
-    border-top: 1px solid #f4f4f4;
-    border-bottom: 1px solid #e4e4e2;
-    -webkit-box-shadow: 1px 1px 3px rgba(0,0,0,0.2);
-       -moz-box-shadow: 1px 1px 3px rgba(0,0,0,0.2);
-            box-shadow: 1px 1px 3px rgba(0,0,0,0.2);
-    -webkit-border-radius: 6px;
-       -moz-border-radius: 6px;
-            border-radius: 6px;
-    color: #666;
-    cursor: pointer;
-    display: block;
-    font-size: 13px;
-    font-weight: bold;
-    line-height: 15px;
-    margin: 0 0 5px;
-    overflow: hidden;
-    padding: 8px 6px 4px 12px;
-    text-decoration: none;
-    text-shadow: 1px 1px 0px rgba(255,255,255,0.5);
-}
-.no-boxshadow .secondary-nav > ul > li > a,
-.no-boxshadow .secondary-nav > ul > li > span {
-    border-right: 1px solid #ddd;
-    border-bottom: 1px solid #ddd;
+  font-family: sans-serif;
+  padding: 0;
 }
 
-.no-cssgradients .secondary-nav > ul > li > a,
-.no-cssgradients .secondary-nav > ul > li > span {
-    /* Hide border radius if a filter may be used (for IE9's sake) */
-    border-radius: 0;
-    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#00000000, endColorstr=#10000000);
+.secondary-nav > ul,.secondary-nav > ul > li > ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
-.secondary-nav > ul > li > a:hover, .secondary-nav > ul > li > span:hover {
-    background-color: #f4f4f2;
-    border-bottom-color: #ddd;
-    color: #555;
+
+.secondary-nav > ul > li > a,.secondary-nav > ul > li > span {
+  background: #fafafa;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(transparent), to(rgba(0, 0, 0, 0.08)));
+
+  background-image: -webkit-linear-gradient(transparent, rgba(0, 0, 0, 0.08));
+  background-image: -moz-linear-gradient(transparent, rgba(0, 0, 0, 0.08));
+  background-image: -o-linear-gradient(transparent, rgba(0, 0, 0, 0.08));
+  background-image: -ms-linear-gradient(transparent, rgba(0, 0, 0, 0.08));
+  background-image: linear-gradient(transparent, rgba(0, 0, 0, 0.08));
+  border-top: 1px solid #f4f4f4;
+  border-bottom: 1px solid #e4e4e2;
+
+  -webkit-box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
+  box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
+  border-radius: 6px;
+  color: #666666;
+  cursor: pointer;
+  display: block;
+  font-size: 13px;
+  font-weight: bold;
+  line-height: 15px;
+  margin: 0 0 5px;
+  overflow: hidden;
+  padding: 8px 6px 4px 12px;
+  text-decoration: none;
+  text-shadow: 1px 1px 0px rgba(255, 255, 255, 0.5);
 }
+
+.no-boxshadow .secondary-nav > ul > li > a,.no-boxshadow .secondary-nav > ul > li > span {
+  border-right: 1px solid #dddddd;
+  border-bottom: 1px solid #dddddd;
+}
+
+.no-cssgradients .secondary-nav > ul > li > a,.no-cssgradients .secondary-nav > ul > li > span {
+  border-radius: 0;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#00000000, endColorstr=#10000000);
+}
+
+.secondary-nav > ul > li > a:hover,.secondary-nav > ul > li > span:hover {
+  background-color: #f4f4f2;
+  border-bottom-color: #dddddd;
+  color: #555555;
+}
+
 .secondary-nav > ul > li > div {
-    overflow: hidden; /* expand the div to wrap the margin/padding of the elements it contains */
-    padding: 0 16px;
+  overflow: hidden;
+  padding: 0 16px;
 }
+
 .secondary-nav > ul > li > div > p {
-    margin: 1em 0px; /* prevent jQuery jumps in IE 7 */
+  margin: 1em 0px;
 }
+
 .secondary-nav > ul > li > ul {
-    padding-bottom: 8px;
+  padding-bottom: 8px;
 }
-.secondary-nav > ul > li > ul > li:first-child {
-    background-position: 12px 14px;
-    padding-top: 12px;
-}
+
 .secondary-nav > ul > li > ul > li {
-    background: transparent url('./images/arrow.png') no-repeat 12px center;
-    font-size: 12px;
-    padding: 6px 8px 6px 30px;
+  background: transparent url('./images/arrow.png') no-repeat 12px center;
+  font-size: 12px;
+  padding: 6px 8px 6px 30px;
 }
+
+.secondary-nav > ul > li > ul > li:first-child {
+  background-position: 12px 14px;
+  padding-top: 12px;
+}
+
 .secondary-nav > ul > li > ul > li > a {
-    color: #01573C;
-    text-decoration: none;
+  color: #01573c;
+  text-decoration: none;
 }
+
 .secondary-nav > ul > li > ul > li > a:hover {
-    color: #743;
-    text-decoration: underline;
+  color: #774433;
+  text-decoration: underline;
 }
