--- a/css/themes/tan.css
+++ b/css/themes/tan.css
@@ -1,28 +1,32 @@
-.secondary-nav.tan {
-    border: 1px solid #ccc;
-    font-family: Georgia, Times, serif;
-}
-.secondary-nav.tan > ul > li > a, .secondary-nav.tan > ul > li > span {
-    background: #ecede2;
-    border-top-color: #fafcf4;
-    border-bottom-color: #e0e2dd;
-    box-shadow: 0;
-    border-radius: 0;
-    color: #555;
-    font-weight: normal;
-    margin-bottom: 0;
-    padding-bottom: 8px;
-    text-shadow: 1px 1px 1px rgba(0,0,0,0.15);
-    filter: none;
+.secondary-nav.tan > ul {
+  border: 1px solid #cccccc;
+  font-family: Georgia, Times, serif;
 }
 
-.secondary-nav.tan > ul > li > a:hover, .secondary-nav.tan > ul > li > span:hover {
-    background: #f5f5e9;
+.secondary-nav.tan > ul > li > a,.secondary-nav.tan > ul > li > span {
+  background: #ecede2;
+  border-top-color: #fafcf4;
+  border-bottom-color: #e0e2dd;
+
+  -webkit-box-shadow: none;
+  box-shadow: none;
+  border-radius: 0;
+  color: #555555;
+  font-weight: normal;
+  margin-bottom: 0;
+  padding-bottom: 8px;
+  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.15);
+  filter: none;
 }
-.secondary-nav.tan > ul > li > ul, .secondary-nav.tan > ul > li > div {
-    background: #fafcf4;
-    -webkit-box-shadow: inset 0px 1px 3px rgba(0,0,0,0.25);
-       -mox-box-shadow: inset 0px 1px 3px rgba(0,0,0,0.25);
-            box-shadow: inset 0px 1px 3px rgba(0,0,0,0.25);
-    color: #555;
+
+.secondary-nav.tan > ul > li > a:hover,.secondary-nav.tan > ul > li > span:hover {
+  background: #f5f5e9;
+}
+
+.secondary-nav.tan > ul > li > ul,.secondary-nav.tan > ul > li > div {
+  background: #f5f5e9;
+
+  -webkit-box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.25);
+  box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.25);
+  color: #555555;
 }
