Assume secondary-nav class is a ul, not an arbitrary parent

--- a/css/accordion.css
+++ b/css/accordion.css
@@ -3,13 +3,13 @@
   padding: 0;
 }
 
-.secondary-nav > ul,.secondary-nav > ul > li > ul {
+.secondary-nav,.secondary-nav > li > ul {
   list-style: none;
   margin: 0;
   padding: 0;
 }
 
-.secondary-nav > ul > li > a,.secondary-nav > ul > li > span {
+.secondary-nav > li > a,.secondary-nav > li > span {
   background: #fafafa;
   background-image: -webkit-gradient(linear, left top, left bottom, from(transparent), to(rgba(0, 0, 0, 0.08)));
 
@@ -37,52 +37,52 @@
   text-shadow: 1px 1px 0px rgba(255, 255, 255, 0.5);
 }
 
-.no-boxshadow .secondary-nav > ul > li > a,.no-boxshadow .secondary-nav > ul > li > span {
+.no-boxshadow .secondary-nav > li > a,.no-boxshadow .secondary-nav > li > span {
   border-right: 1px solid #dddddd;
   border-bottom: 1px solid #dddddd;
 }
 
-.no-cssgradients .secondary-nav > ul > li > a,.no-cssgradients .secondary-nav > ul > li > span {
+.no-cssgradients .secondary-nav > li > a,.no-cssgradients .secondary-nav > li > span {
   border-radius: 0;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#00000000, endColorstr=#10000000);
 }
 
-.secondary-nav > ul > li > a:hover,.secondary-nav > ul > li > span:hover {
+.secondary-nav > li > a:hover,.secondary-nav > li > span:hover {
   background-color: #f4f4f2;
   border-bottom-color: #dddddd;
   color: #555555;
 }
 
-.secondary-nav > ul > li > div {
+.secondary-nav > li > div {
   overflow: hidden;
   padding: 0 16px;
 }
 
-.secondary-nav > ul > li > div > p {
+.secondary-nav > li > div > p {
   margin: 1em 0px;
 }
 
-.secondary-nav > ul > li > ul {
+.secondary-nav > li > ul {
   padding-bottom: 8px;
 }
 
-.secondary-nav > ul > li > ul > li {
+.secondary-nav > li > ul > li {
   background: transparent url('./images/arrow.png') no-repeat 12px center;
   font-size: 12px;
   padding: 6px 8px 6px 30px;
 }
 
-.secondary-nav > ul > li > ul > li:first-child {
+.secondary-nav > li > ul > li:first-child {
   background-position: 12px 14px;
   padding-top: 12px;
 }
 
-.secondary-nav > ul > li > ul > li > a {
+.secondary-nav > li > ul > li > a {
   color: #01573c;
   text-decoration: none;
 }
 
-.secondary-nav > ul > li > ul > li > a:hover {
+.secondary-nav > li > ul > li > a:hover {
   color: #774433;
   text-decoration: underline;
 }
