Change path to images (Fixes #30)

--- a/css/accordion.css
+++ b/css/accordion.css
@@ -67,7 +67,7 @@
 }
 
 .secondary-nav > li > ul > li {
-  background: transparent url('./images/arrow.png') no-repeat 12px center;
+  background: transparent url('../images/arrow.png') no-repeat 12px center;
   font-size: 12px;
   padding: 6px 8px 6px 30px;
 }
