Update accordion styles
Flatten everything out

--- a/css/accordion.css
+++ b/css/accordion.css
@@ -1,88 +1,1 @@
-.secondary-nav {
-  font-family: sans-serif;
-  padding: 0;
-}
-
-.secondary-nav,.secondary-nav > li > ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-
-.secondary-nav > li > a,.secondary-nav > li > span {
-  background: #fafafa;
-  background-image: -webkit-gradient(linear, left top, left bottom, from(transparent), to(rgba(0, 0, 0, 0.08)));
-
-  background-image: -webkit-linear-gradient(transparent, rgba(0, 0, 0, 0.08));
-  background-image: -moz-linear-gradient(transparent, rgba(0, 0, 0, 0.08));
-  background-image: -o-linear-gradient(transparent, rgba(0, 0, 0, 0.08));
-  background-image: -ms-linear-gradient(transparent, rgba(0, 0, 0, 0.08));
-  background-image: linear-gradient(transparent, rgba(0, 0, 0, 0.08));
-  border-top: 1px solid #f4f4f4;
-  border-bottom: 1px solid #e4e4e2;
-
-  -webkit-box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
-  box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
-  border-radius: 6px;
-  color: #666666;
-  cursor: pointer;
-  display: block;
-  font-size: 13px;
-  font-weight: bold;
-  line-height: 15px;
-  margin: 0 0 5px;
-  overflow: hidden;
-  padding: 8px 6px 4px 12px;
-  text-decoration: none;
-  text-shadow: 1px 1px 0px rgba(255, 255, 255, 0.5);
-}
-
-.no-boxshadow .secondary-nav > li > a,.no-boxshadow .secondary-nav > li > span {
-  border-right: 1px solid #dddddd;
-  border-bottom: 1px solid #dddddd;
-}
-
-.no-cssgradients .secondary-nav > li > a,.no-cssgradients .secondary-nav > li > span {
-  border-radius: 0;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#00000000, endColorstr=#10000000);
-}
-
-.secondary-nav > li > a:hover,.secondary-nav > li > span:hover {
-  background-color: #f4f4f2;
-  border-bottom-color: #dddddd;
-  color: #555555;
-}
-
-.secondary-nav > li > div {
-  overflow: hidden;
-  padding: 0 16px;
-}
-
-.secondary-nav > li > div > p {
-  margin: 1em 0px;
-}
-
-.secondary-nav > li > ul {
-  padding-bottom: 8px;
-}
-
-.secondary-nav > li > ul > li {
-  background: transparent url('../images/arrow.png') no-repeat 12px center;
-  font-size: 12px;
-  padding: 6px 8px 6px 30px;
-}
-
-.secondary-nav > li > ul > li:first-child {
-  background-position: 12px 14px;
-  padding-top: 12px;
-}
-
-.secondary-nav > li > ul > li > a {
-  color: #01573c;
-  text-decoration: none;
-}
-
-.secondary-nav > li > ul > li > a:hover {
-  color: #774433;
-  text-decoration: underline;
-}
+.secondary-nav{padding:0}.secondary-nav,.secondary-nav>li>ul{list-style:none;margin:0;padding:0}.secondary-nav>li>a,.secondary-nav>li>span{background:#f7f7f7;border-bottom:0.077em solid #dcddde;color:#666;cursor:pointer;display:block;font-size:13px;font-weight:bold;line-height:15px;margin-bottom:5px;overflow:hidden;outline:0;padding:.75em 3em .75em 1em;position:relative;text-decoration:none;text-shadow:1px 1px 0px rgba(255,255,255,0.5);-webkit-transition:background 300ms;transition:background 300ms}.secondary-nav>li>a:hover,.secondary-nav>li>span:hover,.secondary-nav>li>a:focus,.secondary-nav>li>span:focus{background-color:#eee;border-bottom-color:#ddd;color:#555}.secondary-nav>li>a.active,.secondary-nav>li>span.active{color:#00684d}.secondary-nav>li>div{overflow:hidden;padding:0 16px}.secondary-nav>li>div>p{margin:1em 0px}.secondary-nav>li>ul{padding-bottom:8px}.secondary-nav>li>ul>li{background:transparent url('../images/arrow.png') no-repeat 12px center;font-size:12px;padding:6px 8px 6px 30px}.secondary-nav>li>ul>li:first-child{background-position:12px 14px;padding-top:12px}.secondary-nav>li>ul>li>a{color:#01573c;text-decoration:none}.secondary-nav>li>ul>li>a:hover{color:#743;text-decoration:underline}.secondary-nav .accordion-label:after{color:#aaa;content:"\f054";display:inline-block;font-family:FontAwesome;font-weight:normal;font-style:normal;position:absolute;right:14px;text-decoration:inherit;top:9px;-webkit-font-smoothing:antialiased;speak:none;-webkit-transition:all 300ms;transition:all 300ms}.secondary-nav .expanded .accordion-label{background-color:#eee}.secondary-nav .expanded .accordion-label:after{-webkit-transform:rotate(90deg);transform:rotate(90deg)}
