--- a/less/accordion.less
+++ b/less/accordion.less
@@ -1,5 +1,4 @@
 .secondary-nav {
-    font-family: sans-serif;
     padding: 0;
 
     &, > li > ul {
@@ -9,38 +8,32 @@
     }
     > li {
         > a, > span {
-            background: #fafafa;
-            background-image: -webkit-gradient(linear, left top, left bottom, from(transparent), to(rgba(0,0,0,0.08)));
-            background-image: linear-gradient(transparent, rgba(0,0,0,0.08));
-            border-top: 1px solid #f4f4f4;
-            border-bottom: 1px solid #e4e4e2;
-            box-shadow: 1px 1px 3px rgba(0,0,0,0.2);
-            border-radius: 6px;
+            background: #f7f7f7;
+            border-bottom: 0.077em solid #dcddde;
             color: #666;
             cursor: pointer;
             display: block;
             font-size: 13px;
             font-weight: bold;
             line-height: 15px;
-            margin: 0 0 5px;
+            margin-bottom: 5px;
             overflow: hidden;
-            padding: 8px 6px 4px 12px;
+            outline: 0;
+            padding: .75em 3em .75em 1em;
+            position: relative;
             text-decoration: none;
             text-shadow: 1px 1px 0px rgba(255,255,255,0.5);
+            -webkit-transition: background 300ms;
+            transition: background 300ms;
 
-            .no-boxshadow & {
-                border-right: 1px solid #ddd;
-                border-bottom: 1px solid #ddd;
-            }
-            .no-cssgradients & {
-                // Hide border radius if a filter may be used (for IE9's sake)
-                border-radius: 0;
-                filter: ~"progid:DXImageTransform.Microsoft.gradient(startColorstr=#00000000, endColorstr=#10000000)";
-            }
-            &:hover {
-                background-color: #f4f4f2;
+            &:hover,
+            &:focus {
+                background-color: #eee;
                 border-bottom-color: #ddd;
                 color: #555;
+            }
+            &.active {
+                color: #00684d;
             }
         }
         > div {
@@ -73,6 +66,30 @@
                     }
                 }
             }
+        }
+    }
+    .accordion-label:after {
+        color: #aaa;
+        content: "\f054";
+        display: inline-block;
+        font-family: FontAwesome;
+        font-weight: normal;
+        font-style: normal;
+        position: absolute;
+        right: 14px;
+        text-decoration: inherit;
+        top: 9px;
+        -webkit-font-smoothing: antialiased;
+        speak: none;
+        -webkit-transition: all 300ms;
+        transition: all 300ms;
+    }
+    .expanded .accordion-label {
+        background-color: #eee;
+
+        &:after {
+            -webkit-transform: rotate(90deg);
+            transform: rotate(90deg);
         }
     }
 }
